compiler/zrc_codegen/src/stmt/snapshots/zrc_codegen__stmt__let_decl__tests__variable_shadowing_generates_properly.snap
---
source: compiler/zrc_codegen/src/stmt/let_decl.rs
description: "fn test() {\n    // TEST: shadowing should work, each variable gets its own allocation\n    let x: i32 = 5;\n    let y: i32 = x + 1;  // uses first x (5)\n    let x: i32 = 10;     // shadows x\n    let z: i32 = x + 1;  // uses second x (10)\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %let_z = alloca i32, align 4
  %let_x1 = alloca i32, align 4
  %let_y = alloca i32, align 4
  %let_x = alloca i32, align 4
  store i32 5, ptr %let_x, align 4, !dbg !8
  %load = load i32, ptr %let_x, align 4, !dbg !11
  %add = add i32 %load, 1, !dbg !12
  store i32 %add, ptr %let_y, align 4, !dbg !13
  store i32 10, ptr %let_x1, align 4, !dbg !14
  %load2 = load i32, ptr %let_x1, align 4, !dbg !15
  %add3 = add i32 %load2, 1, !dbg !16
  store i32 %add3, ptr %let_z, align 4, !dbg !17
  ret {} zeroinitializer, !dbg !18
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 3, column: 9, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 1, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 11)
!11 = !DILocation(line: 4, column: 18, scope: !9)
!12 = !DILocation(line: 4, column: 22, scope: !9)
!13 = !DILocation(line: 4, column: 9, scope: !9)
!14 = !DILocation(line: 5, column: 9, scope: !9)
!15 = !DILocation(line: 6, column: 18, scope: !9)
!16 = !DILocation(line: 6, column: 22, scope: !9)
!17 = !DILocation(line: 6, column: 9, scope: !9)
!18 = !DILocation(line: 7, column: 1, scope: !9)
